--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
       <artifactId>rxjava</artifactId>
       <version>1.0.8</version>
     </dependency>
+     <dependency>
+        <groupId>com.higherfrequencytrading</groupId>
+        <artifactId>chronicle</artifactId>
+        <version>1.9.1</version>
+     </dependency>
   </dependencies>
 
    <build>
