Shared marshalling prototype

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,16 @@
          <artifactId>chronicle</artifactId>
          <version>1.9.1</version>
       </dependency>
+      <dependency>
+         <groupId>org.jboss.marshalling</groupId>
+         <artifactId>jboss-marshalling</artifactId>
+         <version>1.4.10.Final</version>
+      </dependency>
+      <dependency>
+         <groupId>org.jboss.marshalling</groupId>
+         <artifactId>jboss-marshalling-river</artifactId>
+         <version>1.4.10.Final</version>
+      </dependency>
    </dependencies>
 
    <build>
