--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
 
    <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+      <jmh.version>1.14</jmh.version>
    </properties>
 
    <dependencies>
@@ -36,6 +38,19 @@
          <artifactId>jboss-marshalling-river</artifactId>
          <version>1.4.10.Final</version>
       </dependency>
+
+      <dependency>
+         <groupId>org.openjdk.jmh</groupId>
+         <artifactId>jmh-core</artifactId>
+         <version>${jmh.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.openjdk.jmh</groupId>
+         <artifactId>jmh-generator-annprocess</artifactId>
+         <version>${jmh.version}</version>
+         <scope>provided</scope>
+      </dependency>
+
    </dependencies>
 
    <build>
@@ -48,6 +63,42 @@
                <target>1.8</target>
             </configuration>
          </plugin>
+
+         <!--<plugin>-->
+            <!--<groupId>org.apache.maven.plugins</groupId>-->
+            <!--<artifactId>maven-shade-plugin</artifactId>-->
+            <!--<version>2.2</version>-->
+            <!--<executions>-->
+               <!--<execution>-->
+                  <!--<phase>package</phase>-->
+                  <!--<goals>-->
+                     <!--<goal>shade</goal>-->
+                  <!--</goals>-->
+                  <!--<configuration>-->
+                     <!--<finalName>${uberjar.name}</finalName>-->
+                     <!--<transformers>-->
+                        <!--<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
+                           <!--<mainClass>org.openjdk.jmh.Main</mainClass>-->
+                        <!--</transformer>-->
+                     <!--</transformers>-->
+                     <!--<filters>-->
+                        <!--<filter>-->
+                           <!--&lt;!&ndash;-->
+                               <!--Shading signed JARs will fail without this.-->
+                               <!--http://stackoverflow.com/questions/999489/invalid-signature-file-when-attempting-to-run-a-jar-->
+                           <!--&ndash;&gt;-->
+                           <!--<artifact>*:*</artifact>-->
+                           <!--<excludes>-->
+                              <!--<exclude>META-INF/*.SF</exclude>-->
+                              <!--<exclude>META-INF/*.DSA</exclude>-->
+                              <!--<exclude>META-INF/*.RSA</exclude>-->
+                           <!--</excludes>-->
+                        <!--</filter>-->
+                     <!--</filters>-->
+                  <!--</configuration>-->
+               <!--</execution>-->
+            <!--</executions>-->
+         <!--</plugin>-->
       </plugins>
    </build>
 </project>
