--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
 
-   <groupId>java.g</groupId>
-   <artifactId>java.g</artifactId>
+   <groupId>java-sandbox</groupId>
+   <artifactId>java-sandbox</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
 
-   <name>java.g</name>
+   <name>java-sandbox</name>
    <url>http://maven.apache.org</url>
 
    <properties>
