--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
          <version>1.0.8</version>
       </dependency>
       <dependency>
+         <groupId>io.reactivex.rxjava2</groupId>
+         <artifactId>rxjava</artifactId>
+         <version>2.1.6</version>
+      </dependency>
+      <dependency>
          <groupId>com.higherfrequencytrading</groupId>
          <artifactId>chronicle</artifactId>
          <version>1.9.1</version>
