--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
          <artifactId>jboss-marshalling-river</artifactId>
          <version>1.4.10.Final</version>
       </dependency>
+       <dependency>
+           <groupId>com.github.ben-manes.caffeine</groupId>
+           <artifactId>caffeine</artifactId>
+           <version>2.6.2</version>
+       </dependency>
    </dependencies>
 
    <build>
