--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
            <artifactId>caffeine</artifactId>
            <version>2.6.2</version>
        </dependency>
+       <dependency>
+           <groupId>com.squareup</groupId>
+           <artifactId>javapoet</artifactId>
+           <version>1.11.1</version>
+       </dependency>
    </dependencies>
 
    <build>
