--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
            <artifactId>javapoet</artifactId>
            <version>1.11.1</version>
        </dependency>
+       <dependency>
+           <groupId>org.agrona</groupId>
+           <artifactId>agrona</artifactId>
+           <version>0.9.30</version>
+       </dependency>
    </dependencies>
 
    <build>
