--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>sandbox</module>
         <module>jmh</module>
+        <module>quarkus-getting-started</module>
     </modules>
 
 </project>
