Quarkus HTTP rest client

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>jmh</module>
         <module>quarkus-getting-started</module>
         <module>aeron</module>
+        <module>quarkus-rest-client</module>
     </modules>
 
 </project>
