Non-blocking with a blocking facade

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>quarkus-getting-started</module>
         <module>aeron</module>
         <module>quarkus-rest-client</module>
+        <module>nonblocking</module>
     </modules>
 
 </project>
