--- a/nonblocking/pom.xml
+++ b/nonblocking/pom.xml
@@ -35,6 +35,11 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>2.1</version>
+        </dependency>
     </dependencies>
 
 </project>
