Add option to create native images without security option

--- a/substratevm/rsa-maven/Makefile
+++ b/substratevm/rsa-maven/Makefile
@@ -5,4 +5,12 @@ build:
 	mvn package
 
 native:
-	native-image -jar target/rsa-0.1.jar target/keyfactoryrsa --enable-all-security-services
+	native-image \
+	-jar target/rsa-0.1.jar \
+	target/keyfactoryrsa
+
+native-with-security:
+	native-image \
+	--enable-all-security-services \
+	-jar target/rsa-0.1.jar \
+	target/keyfactoryrsa
