Add option to trace security services

--- a/substratevm/rsa-maven/Makefile
+++ b/substratevm/rsa-maven/Makefile
@@ -7,10 +7,12 @@ build:
 native:
 	native-image \
 	-jar target/rsa-0.1.jar \
+	-H:+TraceSecurityServices \
 	target/keyfactoryrsa
 
 native-with-security:
 	native-image \
 	--enable-all-security-services \
+	-H:+TraceSecurityServices \
 	-jar target/rsa-0.1.jar \
 	target/keyfactoryrsa
