Move registering of RSA to static block
* And instruct native image to initialise at build time,
so that the registration can happen at build time.
* This of course does not work,
since this is the code that didn't work in the first place.

--- a/substratevm/rsa-maven/Makefile
+++ b/substratevm/rsa-maven/Makefile
@@ -8,6 +8,8 @@ native:
 	native-image \
 	-jar target/rsa-0.1.jar \
 	-H:+TraceSecurityServices \
+	-H:+PrintClassInitialization \
+	--initialize-at-build-time=svm.rsa.KeyFactoryRSA \
 	target/keyfactoryrsa
 
 native-with-security:
