Test out getting environment variables from Java

--- a/docker/helloworld/Makefile
+++ b/docker/helloworld/Makefile
@@ -7,5 +7,8 @@ build:
 image:
 	docker build -t galderz/helloworld-java .
 
+# Order of image and env variable name matter!
+# --env goes BEFORE image name
+# It won't be applied if env is defined after
 run:
-	docker run -t galderz/helloworld-java
+	docker run -t --env SITE_NAME=A galderz/helloworld-java
