Jigsaw module dependency example

--- a/jigsaw/Makefile
+++ b/jigsaw/Makefile
@@ -1,9 +1,17 @@
 clean:
-	rm -drf mods/com.greetings
+	rm -drf mods
 
 build:
-	mkdir -p mods/com.greetings || true
-	javac -d mods/com.greetings \
+	mkdir -p mods/org.astro mods/com.greetings || true
+
+	javac \
+	-d mods/org.astro \
+	src/org.astro/module-info.java \
+	src/org.astro/org/astro/World.java
+
+	javac \
+	--module-path mods \
+	-d mods/com.greetings \
 	src/com.greetings/module-info.java \
 	src/com.greetings/com/greetings/Main.java
 
