Package and run Jigsaw jars

--- a/jigsaw/Makefile
+++ b/jigsaw/Makefile
@@ -25,3 +25,19 @@ build:
 
 run:
 	java --module-path mods -m com.greetings/com.greetings.Main
+
+package:
+	jar \
+	--create \
+	--file=mlib/org.astro@1.0.jar \
+	--module-version=1.0 \
+	-C mods/org.astro .
+
+	jar \
+	--create \
+	--file=mlib/com.greetings.jar \
+	--main-class=com.greetings.Main \
+	-C mods/com.greetings .
+
+run-jar:
+	java -p mlib -m com.greetings
