Build astro separately into a jar and get greetings to use the jar

--- a/jigsaw/Makefile
+++ b/jigsaw/Makefile
@@ -1,9 +1,23 @@
 clean:
 	rm -drf mods
-
-build-separate:
+	rm -drf mlib
 	mkdir -p mods/org.astro mods/com.greetings || true
+	mkdir mlib
 
+build-astro:
+	javac \
+	-d mods/org.astro \
+	src/org.astro/module-info.java \
+	src/org.astro/org/astro/World.java
+
+build-greetings:
+	javac \
+	--module-path mlib \
+	-d mods/com.greetings \
+	src/com.greetings/module-info.java \
+	src/com.greetings/com/greetings/Main.java
+
+build-exploded:
 	javac \
 	-d mods/org.astro \
 	src/org.astro/module-info.java \
@@ -26,18 +40,23 @@ build:
 run:
 	java --module-path mods -m com.greetings/com.greetings.Main
 
-package:
+package-astro:
 	jar \
 	--create \
 	--file=mlib/org.astro@1.0.jar \
 	--module-version=1.0 \
 	-C mods/org.astro .
 
+	rm -drf mods/org.astro
+
+package-greetings:
 	jar \
 	--create \
 	--file=mlib/com.greetings.jar \
 	--main-class=com.greetings.Main \
 	-C mods/com.greetings .
+
+package: package-astro package-greetings
 
 run-jar:
 	java -p mlib -m com.greetings
