Add neo4j example

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>aeron</module>
         <module>quarkus-rest-client</module>
         <module>nonblocking</module>
+        <module>neo4j</module>
     </modules>
 
 </project>
