--- a/kubernetes/pom.xml
+++ b/kubernetes/pom.xml
@@ -10,11 +10,23 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>kubernetes</artifactId>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>14</source>
+                    <target>14</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <properties>
         <fabric8.kubernetes-client.version>4.6.2</fabric8.kubernetes-client.version>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>14</maven.compiler.source>
+        <maven.compiler.target>14</maven.compiler.target>
     </properties>
 
     <dependencies>
