Make sure you java compile with debug symbols!

--- a/substratevm/gdb/Makefile
+++ b/substratevm/gdb/Makefile
@@ -5,7 +5,7 @@ clean:
 	rm -f hellogdb
 
 build:
-	javac HelloGdb.java
+	javac -g HelloGdb.java
 
 native:
 	native-image -H:+TrackNodeSourcePosition HelloGdb
