Added missing modules to root

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,10 @@
         <module>nonblocking</module>
         <module>neo4j</module>
         <module>kubernetes</module>
+        <module>substratevm/jigsaw-maven</module>
         <module>native-external</module>
+        <module>fx</module>
+        <module>docker-java</module>
     </modules>
 
 </project>
