--- a/substratevm/clibraries/Makefile
+++ b/substratevm/clibraries/Makefile
@@ -1,8 +1,12 @@
-GRAAL_SRC_HOME ?= "${HOME}/1/graal-19.3/graal"
 GRAAL_HOME ?= "${GRAAL_SRC_HOME}/sdk/mxbuild/darwin-amd64/GRAALVM_LIBGRAAL_JAVA11_BNATIVE-IMAGE_BNATIVE-IMAGE-CONFIGURE_NI_NIC_NIL_NJU_SJVMCICOMPILER_SNATIVE-IMAGE-AGENT/graalvm-libgraal-java11-19.3.1/Contents/Home"
+GRAAL_SRC_HOME ?= "${HOME}/1/graal-19.3/graal"
 TRIMMED_CLIBRARIES_PATH ?= "/opt/graal-19.3-clibraries"
 
-clean:
+download-all: download-libffi download-fdlibm
+
+clean: clean-fdlibm clean-libffi
+
+clean-all:
 	rm -drf target
 
 make-dirs:
@@ -21,7 +25,7 @@ download-libffi: make-libffi-dirs
 	cd target/archives; \
 	curl -o libffi.tar.gz https://sourceware.org/pub/libffi/libffi-3.2.1.tar.gz
 
-untar-libffi: download-libffi
+untar-libffi:
 	tar -xzvpf target/archives/libffi.tar.gz -C target/src/libffi --strip-components 1
 
 configure-libffi: untar-libffi
@@ -44,6 +48,12 @@ svm-libffi: libffi
 	cp ${GRAAL_SRC_HOME}/substratevm/src/com.oracle.svm.libffi/include/svm_libffi.h target/clibraries/libffi/include
 	cp ${GRAAL_SRC_HOME}/truffle/src/com.oracle.truffle.nfi.native/include/trufflenfi.h target/clibraries/libffi/include
 
+clean-libffi:
+	rm -drf target/src/libffi/*
+	rm -drf target/build/libffi/*
+	rm -drf target/clibraries/libffi/*.a
+	rm -drf target/clibraries/include/*
+
 trim-graal-clibraries:
 	rm -drf ${TRIMMED_CLIBRARIES_PATH}
 	cp -r "${GRAAL_HOME}/lib/svm/clibraries" ${TRIMMED_CLIBRARIES_PATH}
@@ -52,3 +62,105 @@ trim-graal-clibraries:
 	rm -f ${TRIMMED_CLIBRARIES_PATH}/darwin-amd64/include/ffitarget.h
 	rm -f ${TRIMMED_CLIBRARIES_PATH}/darwin-amd64/include/svm_libffi.h
 	rm -f ${TRIMMED_CLIBRARIES_PATH}/darwin-amd64/include/trufflenfi.h
+
+make-fdlibm-dirs: make-dirs
+	mkdir -p target/src/fdlibm || true
+	mkdir -p target/clibraries/fdlibm || true
+
+download-fdlibm: make-fdlibm-dirs
+	cd target/src/fdlibm; \
+	$(call get-fdlibm,makefile); \
+	$(call get-fdlibm,fdlibm.h); \
+	$(call get-fdlibm,e_acos.c); \
+	$(call get-fdlibm,e_acosh.c); \
+	$(call get-fdlibm,e_asin.c); \
+	$(call get-fdlibm,e_atan2.c); \
+	$(call get-fdlibm,e_atanh.c); \
+	$(call get-fdlibm,e_cosh.c); \
+	$(call get-fdlibm,e_exp.c); \
+	$(call get-fdlibm,e_fmod.c); \
+	$(call get-fdlibm,e_gamma.c); \
+	$(call get-fdlibm,e_gamma_r.c); \
+	$(call get-fdlibm,e_hypot.c); \
+	$(call get-fdlibm,e_j0.c); \
+	$(call get-fdlibm,e_j1.c); \
+	$(call get-fdlibm,e_jn.c); \
+	$(call get-fdlibm,e_lgamma.c); \
+	$(call get-fdlibm,e_lgamma_r.c); \
+	$(call get-fdlibm,e_log.c); \
+	$(call get-fdlibm,e_log10.c); \
+	$(call get-fdlibm,e_pow.c); \
+	$(call get-fdlibm,e_rem_pio2.c); \
+	$(call get-fdlibm,e_remainder.c); \
+	$(call get-fdlibm,e_scalb.c); \
+	$(call get-fdlibm,e_sinh.c); \
+	$(call get-fdlibm,e_sqrt.c); \
+	$(call get-fdlibm,k_cos.c); \
+	$(call get-fdlibm,k_rem_pio2.c); \
+	$(call get-fdlibm,k_sin.c); \
+	$(call get-fdlibm,k_standard.c); \
+	$(call get-fdlibm,k_tan.c); \
+	$(call get-fdlibm,s_asinh.c); \
+	$(call get-fdlibm,s_atan.c); \
+	$(call get-fdlibm,s_cbrt.c); \
+	$(call get-fdlibm,s_ceil.c); \
+	$(call get-fdlibm,s_copysign.c); \
+	$(call get-fdlibm,s_cos.c); \
+	$(call get-fdlibm,s_erf.c); \
+	$(call get-fdlibm,s_expm1.c); \
+	$(call get-fdlibm,s_fabs.c); \
+	$(call get-fdlibm,s_finite.c); \
+	$(call get-fdlibm,s_floor.c); \
+	$(call get-fdlibm,s_frexp.c); \
+	$(call get-fdlibm,s_ilogb.c); \
+	$(call get-fdlibm,s_isnan.c); \
+	$(call get-fdlibm,s_ldexp.c); \
+	$(call get-fdlibm,s_lib_version.c); \
+	$(call get-fdlibm,s_log1p.c); \
+	$(call get-fdlibm,s_logb.c); \
+	$(call get-fdlibm,s_matherr.c); \
+	$(call get-fdlibm,s_modf.c); \
+	$(call get-fdlibm,s_nextafter.c); \
+	$(call get-fdlibm,s_rint.c); \
+	$(call get-fdlibm,s_scalbn.c); \
+	$(call get-fdlibm,s_signgam.c); \
+	$(call get-fdlibm,s_significand.c); \
+	$(call get-fdlibm,s_sin.c); \
+	$(call get-fdlibm,s_tan.c); \
+	$(call get-fdlibm,s_tanh.c); \
+	$(call get-fdlibm,w_acos.c); \
+	$(call get-fdlibm,w_acosh.c); \
+	$(call get-fdlibm,w_asin.c); \
+	$(call get-fdlibm,w_atan2.c); \
+	$(call get-fdlibm,w_atanh.c); \
+	$(call get-fdlibm,w_cosh.c); \
+	$(call get-fdlibm,w_exp.c); \
+	$(call get-fdlibm,w_fmod.c); \
+	$(call get-fdlibm,w_gamma.c); \
+	$(call get-fdlibm,w_gamma_r.c); \
+	$(call get-fdlibm,w_hypot.c); \
+	$(call get-fdlibm,w_j0.c); \
+	$(call get-fdlibm,w_j1.c); \
+	$(call get-fdlibm,w_jn.c); \
+	$(call get-fdlibm,w_lgamma.c); \
+	$(call get-fdlibm,w_lgamma_r.c); \
+	$(call get-fdlibm,w_log.c); \
+	$(call get-fdlibm,w_log10.c); \
+	$(call get-fdlibm,w_pow.c); \
+	$(call get-fdlibm,w_remainder.c); \
+	$(call get-fdlibm,w_scalb.c); \
+	$(call get-fdlibm,w_sinh.c); \
+	$(call get-fdlibm,w_sqrt.c)
+
+define get-fdlibm
+curl -o ${1} http://www.netlib.org/fdlibm/${1}
+endef
+
+fdlibm:
+	cd target/src/fdlibm; \
+	CFLAGS="-fPIC -O1 -D_LITTLE_ENDIAN -ffunction-sections -fdata-sections -fvisibility=hidden" make; \
+	cp libm.a ../../clibraries/fdlibm
+
+clean-fdlibm:
+	cd target/src/fdlibm; \
+	make clean
