--- a/matematikak/pom.xml
+++ b/matematikak/pom.xml
@@ -43,6 +43,11 @@
             <version>5.5.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>2.2</version>
+        </dependency>
     </dependencies>
 
 </project>
