Make build targets depend on each other

--- a/substratevm/recompute/Makefile
+++ b/substratevm/recompute/Makefile
@@ -1,9 +1,8 @@
 clean:
-	mvn clean
 	rm -drf reports
 
-build:
-	mvn package
+build: clean
+	mvn clean package
 
-native:
+native: clean build
 	native-image -H:+PrintImageObjectTree --initialize-at-build-time=svm.recompute -jar target/recompute-1.0-SNAPSHOT.jar target/recompute
