The substitutions won't be applied at build time
* Runtime is fine, but it's outside the scope of this.

--- a/substratevm/zipfs/Makefile
+++ b/substratevm/zipfs/Makefile
@@ -5,4 +5,4 @@ build: clean
 	mvn clean package
 
 native: clean build
-	native-image -jar target/zipfs-1.0-SNAPSHOT.jar target/zipfs
+	native-image --initialize-at-build-time=svm.zipfs.SubstituteZipFsAtBuildTime,svm.zipfs.graal -jar target/zipfs-1.0-SNAPSHOT.jar target/zipfs
