Add native image target to attah debugger

--- a/substratevm/sourcecache/Makefile
+++ b/substratevm/sourcecache/Makefile
@@ -3,7 +3,7 @@ all: build native run
 build:
 	mvn clean source:jar package
 
-native: build
+native:
 	native-image \
 	-H:+ReportExceptionStackTraces \
 	-H:GenerateDebugInfo=1 \
@@ -14,3 +14,13 @@ native: build
 
 run:
 	./sourcecache-client/target/sourcecache andrew
+
+native-attach:
+	native-image \
+	-H:+ReportExceptionStackTraces \
+	-H:GenerateDebugInfo=1 \
+	--no-fallback \
+	--debug-attach=*:8000 \
+	--class-path sourcecache-library/target/sourcecache-library-1.0-SNAPSHOT.jar \
+	-jar sourcecache-client/target/sourcecache-client-1.0-SNAPSHOT.jar \
+	sourcecache-client/target/sourcecache
