Update classpath for attach target and use of JBossLoggerFactory

--- a/substratevm/sourcecache/Makefile
+++ b/substratevm/sourcecache/Makefile
@@ -23,7 +23,6 @@ native-attach:
 	-H:GenerateDebugInfo=1 \
 	--no-fallback \
 	--debug-attach=*:8000 \
-	--class-path sourcecache-client/target/dependency/slf4j-jboss-logging-1.2.0.Final.jar \
-	--class-path sourcecache-library/target/sourcecache-library-1.0-SNAPSHOT.jar \
+	--class-path sourcecache-client/target/dependency/slf4j-jboss-logging-1.2.0.Final.jar:sourcecache-client/target/dependency/slf4j-api-1.7.21.jar:sourcecache-client/target/dependency/jboss-logging-3.4.0.Final.jar:sourcecache-library/target/sourcecache-library-1.0-SNAPSHOT.jar \
 	-jar sourcecache-client/target/sourcecache-client-1.0-SNAPSHOT.jar \
 	sourcecache-client/target/sourcecache
