Add print analysis call tree

--- a/substratevm/sourcecache/Makefile
+++ b/substratevm/sourcecache/Makefile
@@ -8,6 +8,7 @@ build:
 native:
 	native-image \
 	-H:+ReportExceptionStackTraces \
+	-H:+PrintAnalysisCallTree \
 	-H:GenerateDebugInfo=1 \
 	--no-fallback \
 	--class-path sourcecache-client/target/dependency/slf4j-jboss-logging-1.2.0.Final.jar:sourcecache-client/target/dependency/slf4j-api-1.7.21.jar:sourcecache-client/target/dependency/jboss-logging-3.4.0.Final.jar:sourcecache-library/target/sourcecache-library-1.0-SNAPSHOT.jar \
@@ -20,6 +21,7 @@ run:
 native-attach:
 	native-image \
 	-H:+ReportExceptionStackTraces \
+	-H:+PrintAnalysisCallTree \
 	-H:GenerateDebugInfo=1 \
 	--no-fallback \
 	--debug-attach=*:8000 \
