--- a/picocli/pom.xml
+++ b/picocli/pom.xml
@@ -2,14 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>java</artifactId>
-        <groupId>java</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>p</groupId>
     <artifactId>picocli</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <build>
         <plugins>
