--- a/junit-programmatic/pom.xml
+++ b/junit-programmatic/pom.xml
@@ -19,6 +19,7 @@
                 <configuration>
                     <source>14</source>
                     <target>14</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
