--- a/charset/pom.xml
+++ b/charset/pom.xml
@@ -8,4 +8,9 @@
     <artifactId>charset</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
+
 </project>
