--- a/jmh-basics/pom.xml
+++ b/jmh-basics/pom.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-    <artifactId>java</artifactId>
-    <groupId>java</groupId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
 
-    <groupId>java-jmh</groupId>
-    <artifactId>java-jmh</artifactId>
+    <groupId>jmh-basics</groupId>
+    <artifactId>jmh-basics</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>java-jmh</name>
+    <name>jmh-basics</name>
 
     <!--
        This is the demo/sample template build script for building Java benchmarks with JMH.
