--- a/remake/Makefile
+++ b/remake/Makefile
@@ -15,6 +15,7 @@ classfiles := $(patsubst %.java,%.class,$(javafiles))
 
 run: main.jar
 > java -jar $<
+.PHONY: run
 
 main.jar: $(classfiles)
 > jar cvfm $@ Manifest.txt $^
@@ -22,10 +23,6 @@ main.jar: $(classfiles)
 %.class: %.java
 > javac -d . -classpath . $<
 
-compile: $(classfiles)
-
 clean:
 > rm -drf *.class
 > rm -drf *.jar
-
-.PHONY: compile run
