--- a/jqwik/pom.xml
+++ b/jqwik/pom.xml
@@ -12,6 +12,7 @@
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
 
+        <hamcrest.version>2.2</hamcrest.version>
         <jqwik.version>1.3.10</jqwik.version>
     </properties>
 
@@ -20,6 +21,13 @@
             <groupId>net.jqwik</groupId>
             <artifactId>jqwik</artifactId>
             <version>${jqwik.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>${hamcrest.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
