--- a/byteman/pom.xml
+++ b/byteman/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>havana</groupId>
     <artifactId>byteman</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
