Show both histograms for young gen (eden) and old gen

--- a/histograms/pom.xml
+++ b/histograms/pom.xml
@@ -51,7 +51,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>org.example.OldGen</mainClass>
+                            <mainClass>org.example.Histograms</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
