Compile an annotated bean

--- a/compilation/pom.xml
+++ b/compilation/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>javapoet</artifactId>
             <version>1.13.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-arc-deployment</artifactId>
+            <version>3.4.1</version>
+        </dependency>
     </dependencies>
 
 </project>
